--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,192 @@
-# comment just to bump caches
+absl-py==1.0.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+alabaster==0.7.12
+antlr4-python3-runtime==4.8
+async-timeout==4.0.2
+attrs==20.2.0
+Automat==0.8.0
+Babel==2.9.1
+backcall==0.2.0
+blinker==1.4
 boto3==1.17.95
 botocore==1.20.95
+cachetools==4.2.4
+certifi==2019.11.28
+cffi==1.15.0
+chardet==3.0.4
+charset-normalizer==2.0.12
+Click==7.0
+cloud-init==21.4
+colorama==0.4.3
 coloredlogs==14.0
-datasets>=1.4.1
-docutils<0.16,>=0.14
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.8
+Cython==0.29.28
+dataclasses==0.6
+datasets==2.0.0
+dbus-python==1.2.16
+decorator==5.1.1
+dill==0.3.4
+distro==1.4.0
+distro-info===0.23ubuntu1
+docformatter==1.3
+docutils==0.15.2
 emoji==0.5.4
-fairscale~=0.4.1
-docformatter==1.3.0
-flake8-bugbear==19.8.0
+entrypoints==0.3
+fairscale==0.4.6
+fairseq==0.10.2
+filelock==3.6.0
 flake8==3.7.8
-importlib-metadata<4.3
-iopath~=0.1.8
+flake8-bugbear==19.8.0
+frozenlist==1.3.0
+fsspec==2022.2.0
 gitdb2==2.0.5
 GitPython==3.0.3
-hydra-core~=1.1.0
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+grpcio==1.44.0
+httplib2==0.14.0
+huggingface-hub==0.4.0
+humanfriendly==10.0
+hydra-core==1.1.1
+hyperlink==19.0.0
+idna==2.8
+imagesize==1.3.0
+importlib-metadata==1.5.0
+importlib-resources==5.4.0
+incremental==16.10.1
+iopath==0.1.9
 ipython==7.31.1
-torch>=1.4.0
+jedi==0.18.1
+Jinja2==2.10.1
+jmespath==0.10.0
 joblib==0.14.1
+jsonlines==1.2.0
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+Markdown==3.3.2
+markdown-it-py==0.5.8
+MarkupSafe==1.1.0
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+more-itertools==4.2.0
+multidict==6.0.2
+multiprocess==0.70.12.2
+myst-parser==0.12.10
+netifaces==0.10.4
 nltk==3.6.6
-omegaconf~=2.1.1
+numpy==1.21.0
+oauthlib==3.1.0
+omegaconf==2.1.1
+packaging==21.3
 pandas==1.4.0
-pytest_regressions==2.1.1
-pytest==5.3.2
+-e git+https://github.com/alpkabac/ParlAI.git@1f3b47ea57dadd99e5abb79e3933923868d694b6#egg=parlai
+parso==0.8.3
 pexpect==4.7.0
+pickleshare==0.7.5
 Pillow==9.0.0
+pluggy==0.13.1
+portalocker==2.4.0
+prompt-toolkit==3.0.28
+protobuf==3.19.4
+ptyprocess==0.7.0
+py==1.11.0
 py-gfm==1.0.2
 py-rouge==1.1
-pyyaml==5.4
+pyarrow==7.0.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycodestyle==2.5.0
+pycparser==2.21
+pyflakes==2.1.1
+Pygments==2.11.2
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==3.0.7
+pyrsistent==0.15.5
+pyserial==3.4
+pytest==5.3.2
+pytest-datadir==1.3.1
+pytest-regressions==2.1.1
+python-apt==2.0.0+ubuntu0.20.4.7
+python-dateutil==2.8.2
+python-debian===0.1.36ubuntu1
+pytz==2022.1
+PyYAML==5.4
 pyzmq==18.1.0
-regex>=2021.8.3
-myst-parser~=0.12.2
-attrs~=20.2.0
+regex==2022.3.15
+requests==2.22.0
 requests-mock==1.7.0
-requests<3,>=2.21.0
+requests-oauthlib==1.3.1
+requests-unixsocket==0.2.0
+responses==0.18.0
+rsa==4.8
+s3transfer==0.4.2
+sacrebleu==2.0.0
+sacremoses==0.0.49
 scikit-learn==0.23.1
 scipy==1.8.0
+SecretStorage==2.3.1
+service-identity==18.1.0
 sh==1.12.14
-sphinx_rtd_theme==0.4.3
-sphinx-autodoc-typehints~=1.10.3
-Sphinx~=2.2.0
+simplejson==3.16.0
+six==1.14.0
+smmap==5.0.0
+smmap2==3.0.1
+snowballstemmer==2.2.0
+sos==4.3
+Sphinx==2.2.2
+sphinx-autodoc-typehints==1.10.3
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+ssh-import-id==5.10
 subword-nmt==0.3.7
+systemd-python==234
+tabulate==0.8.9
 tensorboard==2.3.0
+tensorboard-plugin-wit==1.8.1
 tensorboardX==2.1
-tokenizers>=0.8.0
-tomli<2.0.0
-torchtext>=0.5.0
+threadpoolctl==3.1.0
+tokenizers==0.11.6
+tomli==1.2.3
+torch==1.11.0
+torchtext==0.12.0
 tornado==6.0.4
-tqdm~=4.62.1
+tqdm==4.62.3
+traitlets==5.1.1
+transformers==4.17.0
+Twisted==18.9.0
 typing-extensions==3.7.4.3
+ubuntu-advantage-tools==27.6
+ufw==0.36
+unattended-upgrades==0.1
 Unidecode==1.1.1
-urllib3>=1.26.5
+untokenize==0.1.1
+urllib3==1.26.9
+wadllib==1.3.3
+wcwidth==0.2.5
 websocket-client==0.56.0
 websocket-server==0.4
-jsonlines==1.2.0
-numpy<=1.21 # Used to be `==1.17.5` before but tests -- pulling in latest at 1.22 not happy
-markdown<=3.3.2 # Pin to something that works so tests are happy
+Werkzeug==2.0.3
+xxhash==3.0.0
+yarl==1.7.2
+zipp==3.7.0
+zope.interface==4.7.1
