--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,6 @@ _generated/
 
 # npm compilation
 crowdsourcing/**/package-lock.json
+d2d92381-f2ed-4cea-9e63-f4c016c16095.txt
+615934f3-c535-4314-8447-21a7a1b6afb1.txt
+accountKey.json
