--- a/parlai/chat_service/tasks/chatbot/config_blenderbot2_400M_noweb.yml
+++ b/parlai/chat_service/tasks/chatbot/config_blenderbot2_400M_noweb.yml
@@ -23,6 +23,7 @@ opt:
           knowledge_access_method: memory_only
           search_server: None
           log_level: debug
+          #do not forget to set the following parameter later
           memory_key: full_text
 additional_args:
   page_id: 1 # Configure Your Own Page
