--- a/parlai/chat_service/tasks/chatbot/config_blenderbot2_400M_noweb.yml
+++ b/parlai/chat_service/tasks/chatbot/config_blenderbot2_400M_noweb.yml
@@ -16,13 +16,13 @@ opt:
       model: projects.blenderbot2.agents.blenderbot2:BlenderBot2FidAgent
       model_file: zoo:blenderbot2/blenderbot2_400M/model
       interactive_mode: True
-      memory_key: full_text
       no_cuda: True
-      log_level: debug
       override:
           knowledge_access_method: memory_only
           search_server: None
-          log_level: debug
+          history_size: 100
+          #n_docs: 50
+          use_memories: True
           #do not forget to set the following parameter later
           memory_key: full_text
 additional_args:
