--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,17 @@ attrs==20.2.0
 Automat==0.8.0
 Babel==2.9.1
 backcall==0.2.0
+black==22.1.0
 blinker==1.4
 boto3==1.17.95
 botocore==1.20.95
+CacheControl==0.12.10
 cachetools==4.2.4
 certifi==2019.11.28
 cffi==1.15.0
 chardet==3.0.4
 charset-normalizer==2.0.12
-Click==7.0
+click==8.0.4
 cloud-init==21.4
 colorama==0.4.3
 coloredlogs==14.0
@@ -39,16 +41,27 @@ entrypoints==0.3
 fairscale==0.4.6
 fairseq==0.10.2
 filelock==3.6.0
+firebase-admin==5.2.0
 flake8==3.7.8
 flake8-bugbear==19.8.0
 frozenlist==1.3.0
 fsspec==2022.2.0
 gitdb2==2.0.5
 GitPython==3.0.3
+google-api-core==2.7.1
+google-api-python-client==2.42.0
 google-auth==1.35.0
+google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.6
+google-cloud-core==2.2.3
+google-cloud-firestore==2.4.0
+google-cloud-storage==2.2.1
+google-crc32c==1.3.0
+google-resumable-media==2.3.2
+googleapis-common-protos==1.56.0
 grpcio==1.44.0
-httplib2==0.14.0
+grpcio-status==1.44.0
+httplib2==0.20.4
 huggingface-hub==0.4.0
 humanfriendly==10.0
 hydra-core==1.1.1
@@ -79,8 +92,10 @@ MarkupSafe==1.1.0
 matplotlib-inline==0.1.3
 mccabe==0.6.1
 more-itertools==4.2.0
+msgpack==1.0.3
 multidict==6.0.2
 multiprocess==0.70.12.2
+mypy-extensions==0.4.3
 myst-parser==0.12.10
 netifaces==0.10.4
 nltk==3.6.6
@@ -89,14 +104,18 @@ oauthlib==3.1.0
 omegaconf==2.1.1
 packaging==21.3
 pandas==1.4.0
--e git+https://github.com/alpkabac/ParlAI.git@1f3b47ea57dadd99e5abb79e3933923868d694b6#egg=parlai
+-e git+https://github.com/alpkabac/ParlAI.git@66f2132a83c91f669353ccd70d97a4a6fb751b1b#egg=parlai
 parso==0.8.3
+pathspec==0.9.0
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==9.0.0
+pipdeptree==2.2.1
+platformdirs==2.5.1
 pluggy==0.13.1
 portalocker==2.4.0
 prompt-toolkit==3.0.28
+proto-plus==1.20.3
 protobuf==3.19.4
 ptyprocess==0.7.0
 py==1.11.0
@@ -180,6 +199,7 @@ ufw==0.36
 unattended-upgrades==0.1
 Unidecode==1.1.1
 untokenize==0.1.1
+uritemplate==4.1.1
 urllib3==1.26.9
 wadllib==1.3.3
 wcwidth==0.2.5
